# Corten-DevTools

./: .gitignore  COMPLETION-REPORT.md  Cargo.toml  PROJECT_COMPLETION_REPORT.md  README.md  orchestrate_devtools_implementation.py  orchestration-resume-context.json
components/browser_page_domains/: CLAUDE.md  Cargo.toml  README.md
components/browser_page_domains/src/: browser.rs  emulation.rs  lib.rs  page.rs  security.rs
components/browser_page_domains/tests/: unit_tests.rs
components/browser_page_domains/tests/unit/: browser_domain_tests.rs  emulation_domain_tests.rs  mod.rs  page_domain_tests.rs  security_domain_tests.rs
components/cdp_server/: CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
components/cdp_server/src/: config.rs  error.rs  lib.rs  server.rs  session.rs  transport.rs  validation.rs
components/cdp_server/tests/: unit_tests.rs
components/cdp_server/tests/integration/: mod.rs  websocket_tests.rs
components/cdp_server/tests/unit/: mod.rs  server_tests.rs  session_tests.rs  transport_tests.rs  validation_tests.rs
components/cdp_types/: CLAUDE.md  Cargo.toml  README.md
components/cdp_types/src/: errors.rs  lib.rs
components/cdp_types/src/domains/: browser.rs  console.rs  css.rs  debugger.rs  dom.rs  mod.rs  network.rs  profiler.rs  runtime.rs
components/cdp_types/tests/: unit_tests.rs
components/cdp_types/tests/unit/: core_types_test.rs  domain_types_test.rs  mod.rs
components/console_storage/: CLAUDE.md  Cargo.toml  README.md
components/console_storage/src/: lib.rs  storage_types.rs
components/console_storage/tests/integration/: mod.rs  protocol_integration.rs
components/devtools_api/: CLAUDE.md  Cargo.toml  README.md
components/devtools_api/src/: lib.rs
components/devtools_api/tests/: api_integration.rs
components/devtools_component/: CLAUDE.md  Cargo.toml  README.md
components/devtools_component/src/: component.rs  config.rs  error.rs  lib.rs
components/devtools_component/tests/: integration_tests.rs
components/dom_domain/: CLAUDE.md  Cargo.toml  README.md
components/dom_domain/src/: css_domain.rs  dom_domain.rs  lib.rs  mock_dom.rs
components/inspector_bridges/: CLAUDE.md  Cargo.toml  README.md
components/inspector_bridges/src/: accessibility_inspector.rs  dom_inspector_bridge.rs  elements_inspector.rs  js_debug_bridge.rs  layout_inspector.rs  lib.rs  mock_browser.rs  render_inspector_bridge.rs  source_map.rs  storage_bridge.rs  types.rs
components/inspector_bridges/tests/integration/: mod.rs
components/inspector_bridges/tests/unit/: mod.rs
components/network_domain/: CLAUDE.md  Cargo.toml  README.md  lcov.info
components/network_domain/src/: lib.rs
components/network_domain/tests/: integration_tests.rs  unit_tests.rs
components/profiler_domains/: CLAUDE.md  Cargo.toml  README.md
components/profiler_domains/src/: cpu_profiler.rs  heap_profiler_domain.rs  lib.rs  memory_profiler.rs  profiler_domain.rs  timeline_domain.rs  types.rs
components/profiler_domains/tests/: integration_tests.rs  unit_tests.rs
components/profiler_domains/tests/integration/: mod.rs  profiler_integration_tests.rs
components/profiler_domains/tests/unit/: cpu_profiler_tests.rs  heap_profiler_domain_tests.rs  memory_profiler_tests.rs  mod.rs  profiler_domain_tests.rs  timeline_domain_tests.rs
components/protocol_handler/: CLAUDE.md  COMPLETION_SUMMARY.md  Cargo.toml  README.md
components/protocol_handler/src/: batching.rs  lib.rs  validation.rs
components/protocol_handler/tests/: protocol_integration.rs  unit_tests.rs
components/protocol_handler/tests/integration/: mod.rs
components/protocol_handler/tests/unit/: validation_tests.rs
components/runtime_debugger/: CLAUDE.md  COVERAGE_ANALYSIS.md  Cargo.toml  README.md
components/runtime_debugger/src/: cache.rs  debugger.rs  lib.rs  preview.rs  repl.rs  runtime.rs
contracts/: browser_page_domains.yaml  cdp_server.yaml  cdp_types.yaml  console_storage.yaml  devtools_api.yaml  devtools_component.yaml  dom_domain.yaml  network_domain.yaml  profiler_domains.yaml  protocol_handler.yaml  runtime_debugger.yaml
orchestration/: MIGRATION_LOG.json
orchestration/data/: installation_manifest.json  migration_log.json
orchestration/data/state/: extraction_metadata.json  queue_state.json
specifications/: devtools-component-specification.md
tests/: cdp_compliance_tests.rs  integration_e2e.rs
tests/cdp_compliance/: domain_enable_disable_tests.rs  error_response_tests.rs  method_parameter_tests.rs  mod.rs  protocol_handler_tests.rs
