[package]
name = "cdp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
cdp_types = { path = "../cdp_types" }

# WebSocket and async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
tracing = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
thiserror = "1.0"
anyhow = "1.0"

# HTTP for request handling
http = "1.0"

[dev-dependencies]
# Testing utilities
reqwest = "0.11"
tokio-test = "0.4"
