[package]
name = "devtools_component"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
cdp_types = { path = "../cdp_types" }
cdp_server = { path = "../cdp_server" }
protocol_handler = { path = "../protocol_handler" }
dom_domain = { path = "../dom_domain" }
network_domain = { path = "../network_domain" }
runtime_debugger = { path = "../runtime_debugger" }
profiler_domains = { path = "../profiler_domains" }
console_storage = { path = "../console_storage" }
browser_page_domains = { path = "../browser_page_domains" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
