[package]
name = "dom_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
cdp_types = { path = "../cdp_types" }
protocol_handler = { path = "../protocol_handler" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
dashmap = "5.5"
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
