[package]
name = "network_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
cdp_types = { path = "../cdp_types" }
protocol_handler = { path = "../protocol_handler" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
dashmap = "5.5"
parking_lot = "0.12"
tracing = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
