[package]
name = "protocol_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
cdp_types = { path = "../cdp_types" }
serde_json = "1.0"
dashmap = "5.5"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1.0"
